--- a/weatherindex.html
+++ b/weatherindex.html
@@ -39,9 +39,17 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
-      src="https://unpkg.com/axios/dist/axios.min.js"
       src="https://kit.fontawesome.com/63adeefb61.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+      function showUser(response) {
+        alert(`The user name is ${response.data.name}`);
+      }
+
+      let url = "https://jsonplaceholder.typicode.com/users/1";
+      axios.get(url).then(showUser);
+    </script>
   </body>
 </html>
