added my github link to end of app

--- a/weatherapp.html
+++ b/weatherapp.html
@@ -39,5 +39,11 @@
         <div class="wind">Wind speed: 6.2 km/h</div>
       </div>
     </div>
+    <div id="coded-by">
+      <a href="https://github.com/ishyexe/vanilla-weather-app" target="_blank">
+        open-source code</a
+      >
+      by ishy ☽
+    </div>
   </body>
 </html>
