--- a/weatherapp.html
+++ b/weatherapp.html
@@ -37,13 +37,16 @@
         </div>
         <div class="humidity">Humidity: 60%</div>
         <div class="wind">Wind speed: 6.2 km/h</div>
+        <h6 id="coded-by">
+          <a
+            href="https://github.com/ishyexe/vanilla-weather-app"
+            target="_blank"
+          >
+            open-source code</a
+          >
+          by ishy ☽
+        </h6>
       </div>
-    </div>
-    <div id="coded-by">
-      <a href="https://github.com/ishyexe/vanilla-weather-app" target="_blank">
-        open-source code</a
-      >
-      by ishy ☽
     </div>
   </body>
 </html>
