added js for forecast, not working tho

--- a/index.html
+++ b/index.html
@@ -37,19 +37,7 @@
         </div>
         <div class="humidity">Humidity: 60%</div>
         <div class="wind">Wind speed: 6.2 km/h</div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="date">Thu</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="Forecast"
-                width="36px"
-              />
-              <div class="forecast-temp">18°|12°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
         <h6 id="coded-by">
           <a
             href="https://github.com/ishyexe/vanilla-weather-app"
