--- a/index.html
+++ b/index.html
@@ -3,41 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="src/style.css" />
-    <script
-      src="https://kit.fontawesome.com/63adeefb61.js"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    ></script>
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  </head>
 
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
+  </head>
   <body>
-    <div class="card">
-      <div class="search">
-        <input type="text" class="search-bar" placeholder="Search" />
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
-      </div>
-      <div class="weather loading">
-        <h2 class="city">Weather in Denver</h2>
-        <h1 class="temp">51°C</h1>
-        <div class="flex">
-          <img
-            src="https://openweathermap.org/img/wn/04n.png"
-            alt=""
-            class="icon"
-          />
-          <div class="description">Cloudy</div>
+    <div class="container">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"> °C</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
+              </ul>
+            </div>
+          </div>
+          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-icon"><img src="icons/unknown.png" /></div>
         </div>
-        <div class="humidity">Humidity: 60%</div>
-        <div class="wind">Wind speed: 6.2 km/h</div>
-        <div class="weather-forecast" id="forecast"></div>
-        <h6 id="coded-by">
+        <small id="coded-by">
           <a
             href="https://github.com/ishyexe/vanilla-weather-app"
             target="_blank"
@@ -45,10 +74,10 @@
             open-source code</a
           >
           by ishy ☽
-        </h6>
+        </small>
       </div>
     </div>
 
-    <script src="src/script.js" defer></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
