--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
           </div>
           <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-icon"><img src="icons/${icon}.png" /></div>
         </div>
         <small id="coded-by">
           <a
